--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   lottie: ^1.4.2
   geocoding: ^2.0.5
   simple_animations: ^5.0.2
+  another_flushbar: ^1.12.30
+  shimmer: ^3.0.0
+  file_picker: ^5.2.3
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
